# benchUI

./: .gitignore  CMakeLists.txt  Jenkinsfile  Jenkinsfile-feiteng  Jenkinsfile-longxin  build.sh
framework/: CMakeLists.txt
framework/inc/: EGLRuntime.h  ETCHeader.h  Enum.h  HDRImage.h  LinuxFbdevPlatfrom.h  LinuxOffscreenPlatform.h  LinuxX11Platform.h  Mathematics.h  Matrix.h  Model.h  Platform.h  Primitive.h  Rect.h  Sample.h  Shader.h  Text.h  Texture.h  Timer.h  Util.h  VectorTypes.h  WindowsPlatform.h  rgb.h
framework/src/: EGLRuntime.cpp  ETCHeader.cpp  Enum.cpp  HDRImage.cpp  LinuxFbdevPlatform.cpp  LinuxOffscreenPlatform.cpp  LinuxX11Platform.cpp  Matrix.cpp  Model.cpp  Platform.cpp  Primitive.cpp  Sample.cpp  Shader.cpp  Text.cpp  Texture.cpp  Timer.cpp  Util.cpp  WindowsPlatform.cpp  bmp.cpp  glad.c  rgb.c
samples/: CMakeLists.txt
samples/basic/: Query.cpp  es11-alpha.cpp  es11-blendfunc.cpp  es11-colormask.cpp  es11-colorpointer.cpp  es11-cullfrontface.cpp  es11-depth.cpp  es11-diisenable.cpp  es11-drawarrays.cpp  es11-fog.cpp  es11-frustumortho.cpp  es11-light.cpp  es11-light1.cpp  es11-line.cpp  es11-logicop.cpp  es11-material.cpp  es11-material1.cpp  es11-matrix.cpp  es11-mipmap.cpp  es11-multitexcoord.cpp  es11-normalpointer.cpp  es11-perspectivecorrect.cpp  es11-pointsize.cpp  es11-pointsprite.cpp  es11-polygonoffset.cpp  es11-sampleconverage.cpp  es11-scissor.cpp  es11-stencil.cpp  es11-texcompress.cpp  es11-texcoordpointer.cpp  es11-texcopy.cpp  es11-texcopysub.cpp  es11-texenv.cpp  es11-teximage.cpp  es11-texparameter.cpp  es11-texsub.cpp  es11-texturematrix.cpp  es20-blendequ.cpp  es20-blendequsep.cpp  es20-blendfunc.cpp  (+355 more)
samples/coverage/: es11-clipplane.cpp  es11-drawelements.cpp  es11-frustumortho1.cpp  es11-getpointerv.cpp  es11-getstring.cpp  es11-points.cpp  es11-shademodel.cpp  es11-transform.cpp  es11-triangle.cpp  es11-vertexpointer.cpp  es20-copytex.cpp  es20-copytexsub1.cpp  es20-depthmask.cpp  es20-etcatlasalpha.cpp  es20-framebufferobject.cpp  es20-getstring.cpp  es20-samplecoverage.cpp  es20-texturecube.cpp  es20-texturecubesub.cpp  es20-triangle.cpp  es20-triangle_frame_buffer.cpp  es30-bufferusage.cpp  es30-drawarrayinstance.cpp  es30-fbomipmapcopypix.cpp  es30-feedback-seperate.cpp  es30-fragdatalocation.cpp  es30-gettexparams.cpp  es30-interlogics.cpp  es30-mapbufferrange.cpp  es30-mapflushbuffer.cpp  es30-sampler-min.cpp  es30-sampler-mipmap.cpp  es30-sampler-wrap3d.cpp  es30-texstorage2d-cubemap.cpp  es30-texsub3d.cpp  es30-transfeedbackubo.cpp  es30-uniformmatrix2x3fv.cpp  es30-uniformmatrix4x2fv.cpp  es30-uniformmatrix4x3fv.cpp  es30-vertexattribi.cpp  (+97 more)
samples/function/: gl20-compatibility.cpp  gl40-compatibility.cpp  gl43-fragment_atomic_counter_buffers.cpp  gl43-fragment_atomic_counters.cpp  gl43-fragment_image_units.cpp  gl43-fragment_uniform_blocks.cpp  gl43-fragment_uniform_components_vectors.cpp  gl43-geometry_image_units.cpp  gl43-geometry_input_components.cpp  gl43-geometry_output_components.cpp  gl43-geometry_output_vertices.cpp  gl43-geometry_shader_storge_blocks.cpp  gl43-geometry_total_output_components.cpp  gl43-geometry_uniform_blocks.cpp  gl43-geometry_uniform_components.cpp  gl43-max_integer_samples.cpp  gl43-odd.cpp  gl43-patch_vertices.cpp  gl43-patch_vertices_without_te.cpp  gl43-tc_output_components.cpp  gl43-tc_total_components.cpp  gl43-tc_uniform_blocks.cpp  gl43-tc_uniform_components.cpp  gl43-te_uniform_blocks.cpp  gl43-te_uniform_components.cpp  gl43-texel_maxoffset.cpp  gl43-texel_minoffset.cpp  gl43-texgather_maxoffset.cpp  gl43-texgather_minoffset.cpp  max-3d-texture-size.cpp  max-array-texture-layers.cpp  max-cube-map-texture-size.cpp  max-draw-buffers.cpp  max-element-index.cpp  max-elements-vertex.cpp  max-fragment-uniform-components.cpp  max-getMax.cpp  max-renderbuffer-size.cpp  max-texture-buffer-size.cpp  max-uniform-block.cpp  (+5 more)
samples/model/: aishe.cpp  apple.cpp  bird.cpp  es20-armadillo.cpp  es20-f16.cpp  es20-gears.cpp  gaoda.cpp  gl43-bindvertexbuffer1.cpp  gl43-blendbarrier.cpp  gl43-blendequ.cpp  gl43-colormaski.cpp  gl43-compresstex.cpp  gl43-copytexsubimage3d.cpp  gl43-cubemap.cpp  gl43-depthmask.cpp  gl43-indexfifo.cpp  gl43-mipmap.cpp  gl43-multilines.cpp  gl43-multipoints.cpp  gl43-plb_bigtriangle.cpp  gl43-pointsize.cpp  gl43-polygonoffset.cpp  gl43-primitivelines.cpp  gl43-program-pipeline.cpp  gl43-samplecoverage.cpp  gl43-shader.cpp  gl43-stencil.cpp  gl43-subdatasync.cpp  gl43-swizzle.cpp  gl43-type.cpp  gl43-uniformmatrix234.cpp  gl43_blend.cpp  gl43_gl_pointSize.cpp  gl43_pointSize.cpp  gl43_polygonoffset.cpp  gl45-cubemap.cpp  jinx-Alpha.cpp  jinx.cpp  jinx_512.cpp  jinx_513.cpp  (+4 more)
samples/performance/: 2d_image.cpp  2d_storage.cpp  3d_image.cpp  3d_storage.cpp  basic.cpp  blend.cpp  clearbuffer_color.cpp  clearbuffer_depth.cpp  clearbuffer_stencil.cpp  clearcolor.cpp  cleardepth.cpp  cleardepthstencil.cpp  clearstencil.cpp  clip.cpp  clip_no.cpp  compressedtex.cpp  compute.cpp  conditionrender.cpp  copy_buffer.cpp  depth.cpp  draw_indirect.cpp  draw_instance.cpp  draw_instance_base.cpp  drawarrays.cpp  drawelements_withebo.cpp  drawelements_withoutebo.cpp  feedback.cpp  geom.cpp  getbuffersubdata.cpp  getteximage.cpp  hint_fast.cpp  hint_nice.cpp  hint_nocare.cpp  logicop.cpp  map_buffer_read.cpp  map_buffer_write.cpp  msaa.cpp  pipeline.cpp  point_sprite.cpp  primi_speed.cpp  (+19 more)
samples/shader/: gl30_ftransform.cpp  gl30_shadow1x.cpp  gl30_texture1x.cpp  gl43_CShader_Image.cpp  gl43_CShader_SSBO.cpp  gl43_CShader_Shared.cpp  gl43_CShader_Variables.cpp  gl43_CShader_atomicCounter.cpp  gl43_EmitStreamVertex_EndStreamPrimitive1.cpp  gl43_EmitStreamVertex_EndStreamPrimitive2.cpp  gl43_EmitVertex_EndPrimitive1.cpp  gl43_FragColor.cpp  gl43_FragCoord.cpp  gl43_FragData.cpp  gl43_FragDepth.cpp  gl43_FrontFacing.cpp  gl43_HelperInvocation.cpp  gl43_InstanceID.cpp  gl43_InvocationID.cpp  gl43_Layer.cpp  gl43_PointCoord.cpp  gl43_PrimitiveIDIn.cpp  gl43_SSBO_atomic.cpp  gl43_SampleMask.cpp  gl43_SampleMaskIn.cpp  gl43_TessShader.cpp  gl43_abs.cpp  gl43_acos.cpp  gl43_acosh.cpp  (+123 more)
(+954 files in other folders)
